feat: added base components

--- a/packages/ui/src/components/button/button.module.css
+++ b/packages/ui/src/components/button/button.module.css
@@ -1,4 +1,14 @@
 .button {
-  background: blue;
-  padding: var(--size-space-20);
+  cursor: pointer;
+  border: none;
+  background: none;
+  display: inline-block;
+  text-decoration: none;
+  appearance: none;
+}
+
+.secondary {
+}
+
+.small {
 }
