--- a/packages/ui/src/components/heading/heading.module.css
+++ b/packages/ui/src/components/heading/heading.module.css
@@ -1,23 +1,57 @@
-.h1 {
+.heading {
+  font-family: var(--heading-font, var(--font-serif));
+  font-weight: var(--heading-weight, var(--weight-bold));
   margin: 0;
+}
+
+[data-invert="true"] .heading {
+  color: var(--color-white);
+}
+
+.h1 {
+  font-size: var(
+    --h1-font-size,
+    clamp(var(--size-font-6xl), 6vw, var(--size-font-7xl))
+  );
+  line-height: var(--h1-leading, var(--leading-none));
 }
 
 .h2 {
-  margin: 0;
+  font-size: var(
+    --h2-font-size,
+    clamp(var(--size-font-5xl), 5vw, var(--size-font-6xl))
+  );
+  line-height: var(--h2-leading, var(--leading-none));
 }
 
 .h3 {
-  margin: 0;
+  font-size: var(
+    --h3-font-size,
+    clamp(var(--size-font-4xl), 4vw, var(--size-font-5xl))
+  );
+  line-height: var(--h3-leading, var(--leading-tight));
 }
 
 .h4 {
-  margin: 0;
+  font-size: var(
+    --h4-font-size,
+    clamp(var(--size-font-3xl), 3vw, var(--size-font-4xl))
+  );
+  line-height: var(--h4-leading, var(--leading-tight));
 }
 
 .h5 {
-  margin: 0;
+  font-size: var(
+    --h5-font-size,
+    clamp(var(--size-font-lg), 2.5vw, var(--size-font-xl))
+  );
+  line-height: var(--h5-leading, var(--leading-tight));
 }
 
 .h6 {
-  margin: 0;
+  font-size: var(
+    --h6-font-size,
+    clamp(var(--size-font-lg), 2vw, var(--size-font-xl))
+  );
+  line-height: var(--h6-leading, var(--leading-tight));
 }
