--- a/packages/react/src/layouts/box/box.module.css
+++ b/packages/react/src/layouts/box/box.module.css
@@ -1,4 +1,5 @@
 .box {
   padding: var(--py, 0) var(--px, 0);
   background: var(--background, var(--color-white));
+  border-radius: var(--radius, 0);
 }
