--- a/packages/react/src/layouts/cluster/cluster.module.css
+++ b/packages/react/src/layouts/cluster/cluster.module.css
@@ -1,7 +1,7 @@
 .cluster {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--space);
+  gap: var(--cluster-space);
   justify-content: flex-start;
   align-items: center;
 }
