--- a/apps/jaynielsen/src/components/header/header.module.css
+++ b/apps/jaynielsen/src/components/header/header.module.css
@@ -1,7 +1,8 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: var(--size-space-50);
+  padding: var(--size-space-50) calc(var(--size-space-100) - 1px);
+  padding-top: var(--size-space-100);
   border-bottom: 1px solid var(--color-zinc-800);
   position: relative;
   align-items: center;
@@ -27,10 +28,11 @@
 }
 
 .social {
-  font-size: var(--size-font-4xl);
+  font-size: clamp(var(--size-font-3xl), 4vw, var(--size-font-4xl));
 }
 
 .social a {
+  color: var(--text-color);
   display: inline-flex;
 }
 
