feat: anchor component

--- a/apps/jaynielsen/src/components/header/header.module.css
+++ b/apps/jaynielsen/src/components/header/header.module.css
@@ -3,7 +3,7 @@
   justify-content: space-between;
   padding: var(--size-space-50) calc(var(--size-space-100) - 1px);
   padding-top: var(--size-space-100);
-  border-bottom: 1px solid var(--color-zinc-800);
+  border-bottom: 1px solid var(--text-color);
   position: relative;
   align-items: center;
 }
@@ -16,7 +16,7 @@
   height: 25%;
   bottom: 0;
   width: 1px;
-  background: var(--color-zinc-800);
+  background: var(--text-color);
 }
 
 .header::before {
@@ -39,5 +39,5 @@
 .social a:focus {
   outline-color: var(--color-cyan-500);
   outline-offset: 0.05em;
-  outline-radius: var(--size-radius-base);
+  --moz-outline-radius: var(--size-radius-base);
 }
