--- a/apps/jaynielsen/src/components/title/title.module.css
+++ b/apps/jaynielsen/src/components/title/title.module.css
@@ -2,8 +2,10 @@
   position: relative;
 }
 
-.title:after,
-.title:before {
+.title::after,
+.title::before,
+.heading::after,
+.heading::before {
   content: "";
   display: block;
   position: absolute;
@@ -29,7 +31,21 @@
   position: relative;
   display: inline-flex;
   padding: 0 calc(var(--size-space-100) - 1px);
-  border: 1px solid var(--text-color);
   border-width: 0 1px;
   text-transform: uppercase;
+}
+
+.heading::before,
+.heading::after {
+  width: 1px;
+  top: 25%;
+  bottom: 25%;
+}
+
+.heading::before {
+  left: 0;
+}
+
+.heading::after {
+  right: 0;
 }
