feat: added switcher alignment

--- a/packages/react/src/layouts/switcher/switcher.module.css
+++ b/packages/react/src/layouts/switcher/switcher.module.css
@@ -17,3 +17,15 @@
 .limit2 > :nth-child(n + 3) ~ * {
   flex-basis: 100%;
 }
+
+.alignStart {
+  align-items: flex-start;
+}
+
+.alignCenter {
+  align-items: center;
+}
+
+.alignEnd {
+  align-items: flex-end;
+}
