--- a/packages/react/src/layouts/center/center.module.css
+++ b/packages/react/src/layouts/center/center.module.css
@@ -1,15 +1,15 @@
 .center {
   box-sizing: content-box;
-  max-inline-size: var(--max-width);
+  max-inline-size: var(--width);
   margin-inline: auto;
   padding-inline: var(--gutter);
 }
 
-.textCenter {
+.text {
   text-align: center;
 }
 
-.intrinsicCenter {
+.intrinsic {
   display: flex;
   flex-direction: column;
   align-items: center;
