--- a/packages/react/src/layouts/grid/grid.module.css
+++ b/packages/react/src/layouts/grid/grid.module.css
@@ -1,13 +1,10 @@
 .grid {
   display: grid;
-  grid-gap: var(--grid-space);
+  grid-gap: var(--space);
 }
 
-@supports (width: min(var(--minimum), 100%)) {
+@supports (width: min(var(--min), 100%)) {
   .grid {
-    grid-template-columns: repeat(
-      auto-fit,
-      minmax(min(var(--minimum), 100%), 1fr)
-    );
+    grid-template-columns: repeat(auto-fit, minmax(min(var(--min), 100%), 1fr));
   }
 }
