--- a/packages/react/src/layouts/center/center.module.css
+++ b/packages/react/src/layouts/center/center.module.css
@@ -1,8 +1,8 @@
 .center {
   box-sizing: content-box;
-  max-inline-size: var(--width);
+  max-inline-size: var(--center-width);
   margin-inline: auto;
-  padding-inline: var(--gutter);
+  padding-inline: var(--center-gutter);
 }
 
 .text {
