--- a/packages/react/src/layouts/grid/grid.module.css
+++ b/packages/react/src/layouts/grid/grid.module.css
@@ -1,10 +1,13 @@
 .grid {
   display: grid;
-  grid-gap: var(--space);
+  grid-gap: var(--grid-space);
 }
 
-@supports (width: min(var(--min), 100%)) {
+@supports (width: min(var(--grid-min), 100%)) {
   .grid {
-    grid-template-columns: repeat(auto-fit, minmax(min(var(--min), 100%), 1fr));
+    grid-template-columns: repeat(
+      auto-fit,
+      minmax(min(var(--grid-min), 100%), 1fr)
+    );
   }
 }
