--- a/packages/react/src/layouts/sidebar/sidebar.module.css
+++ b/packages/react/src/layouts/sidebar/sidebar.module.css
@@ -1,13 +1,13 @@
 .sidebar {
   display: flex;
   flex-wrap: wrap;
-  gap: var(--space);
-  align-items: var(--align);
+  gap: var(--sidebar-space);
+  align-items: var(--sidebar-align);
 }
 
 .left > :first-child,
 .right > :last-child {
-  flex-basis: var(--width);
+  flex-basis: var(--sidebar-width);
   flex-grow: 1;
 }
 
@@ -15,7 +15,7 @@
 .right > :first-child {
   flex-basis: 0;
   flex-grow: 999;
-  min-inline-size: var(--min);
+  min-inline-size: var(--sidebar-min);
 }
 
 .reverse {
