--- a/packages/react/src/components/link-overlay/link-overlay.module.css
+++ b/packages/react/src/components/link-overlay/link-overlay.module.css
@@ -1,6 +1,6 @@
 .link-box {
   position: relative;
-  border-radius: var(--gaze-size-radius-sm);
+  border-radius: var(--gaze-radius-sm);
 
   & a[href]:not(.link-overlay) {
     position: relative;
@@ -8,7 +8,7 @@
   }
 
   &:has(.link-overlay:focus-visible) {
-    outline: var(--gaze-color-outline-default) solid var(--gaze-size-border-px);
+    outline: var(--gaze-color-outline-default) solid var(--gaze-border-width-px);
     outline-offset: 0.25em;
   }
 }
