--- a/packages/react/src/components/text/text.module.css
+++ b/packages/react/src/components/text/text.module.css
@@ -2,8 +2,8 @@
   margin: 0;
   color: var(--text-color, var(--gaze-color-text-default));
   font-weight: var(--text-weight, var(--gaze-weight-normal));
-  font-size: var(--text-size, var(--gaze-size-font-base));
-  font-family: var(--gaze-font-base);
+  font-size: var(--text-size, var(--gaze-font-size-base));
+  font-family: var(--gaze-font-family-base);
   line-height: var(--text-leading, var(--gaze-leading-normal));
 }
 
