--- a/packages/react/src/layouts/grid/grid.module.css
+++ b/packages/react/src/layouts/grid/grid.module.css
@@ -1,10 +1,10 @@
-.grid {
+.gaze-grid {
   display: grid;
   grid-gap: var(--grid-space);
 }
 
 @supports (width: min(var(--grid-min), 100%)) {
-  .grid {
+  .gaze-grid {
     grid-template-columns: repeat(
       auto-fit,
       minmax(min(var(--grid-min), 100%), 1fr)
