feat: allow switcher row to be reversed

--- a/packages/react/src/layouts/switcher/switcher.module.css
+++ b/packages/react/src/layouts/switcher/switcher.module.css
@@ -18,3 +18,7 @@
 .gaze-switcher-limit-2 > :nth-child(n + 3) ~ * {
   flex-basis: 100%;
 }
+
+.gaze-switcher-reverse {
+  flex-direction: row-reverse;
+}
