--- a/packages/react/src/components/separator/separator.module.css
+++ b/packages/react/src/components/separator/separator.module.css
@@ -1,7 +1,7 @@
 .gaze-separator {
   height: 0;
   margin: 0;
-  border-style: var(--separator-variant, "solid");
+  border-style: var(--separator-variant, solid);
   border-width: 0;
   border-top-color: var(--separator-color, var(--gaze-color-text-default));
   border-top-width: var(--separator-thickness, var(--gaze-border-width-px));
